--- a/2_hotel-booking/css/style.css
+++ b/2_hotel-booking/css/style.css
@@ -508,7 +508,37 @@ body {
   margin-left: 1.25vw;
 }
 
+.navbar-bottom {
+  background-color: #0A223D;
+}
+
+.navbar-menu__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
 .navbar-menu__link {
   text-decoration: none;
+  font-family: "Mulish", serif;
+  font-size: 14px;
+  font-weight: 700;
+  color: #FFFFFF;
+  line-height: 18px;
+  text-transform: uppercase;
+}
+
+.navbar-menu__item {
+  list-style: none;
+  padding-top: 31px;
+  padding-bottom: 31px;
 }
 /*# sourceMappingURL=style.css.map */
