--- a/2_hotel-booking/blocks/header/_header.scss
+++ b/2_hotel-booking/blocks/header/_header.scss
@@ -14,8 +14,38 @@
 
 @import "../search/search.scss";
 
-.navbar__search {
-    margin-right: (368px / 1440px) * 100vw;
+.navbar {
+    &__search {
+        margin-right: (368px / 1440px) * 100vw;
+    }
+
+    &-bottom {
+        background-color: $dark;
+    }
+    
+    &-menu {
+        padding-top: 31px;
+        padding-bottom: 31px;
+
+        &__list {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+            padding: 0;
+            margin: 0;
+        }
+        
+        &__link {
+            text-decoration: none;
+            @include font-mulish(14px, 700, $light, 18px);
+            text-transform: uppercase;
+        }
+        
+        &__item {
+            list-style: none;
+        }
+    }
 }
 
 .user {
@@ -37,27 +67,4 @@
         @include font-mulish(14px, 400, $font-grey, 17.57px);
         margin-left: (18px / 1440px) * 100vw;
     }
-}
-
-.navbar-bottom {
-    background-color: $dark;
-}
-
-.navbar-menu__list {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-.navbar-menu__link {
-    text-decoration: none;
-    @include font-mulish(14px, 700, $light, 18px);
-    text-transform: uppercase;
-}
-
-.navbar-menu__item {
-    list-style: none;
-    padding-top: 31px;
-    padding-bottom: 31px;
 }
