--- a/2_hotel-booking/css/style.scss
+++ b/2_hotel-booking/css/style.scss
@@ -13,5 +13,8 @@
 //Подключение header
 @import "../blocks/header/header.scss";
 
+//Подключение breadcrumb
+@import "../blocks/breadcrumb/breadcrumb.scss";
+
 //Подключение стилей для адаптива
 @import "./media";
