--- a/2_hotel-booking/blocks/header/header.pug
+++ b/2_hotel-booking/blocks/header/header.pug
@@ -1,23 +1,24 @@
 include ./config.pug
 
-header 
-    .container
-        .navbar__top
-            a.navbar__logo(href="#")
-                img.navbar__logo-img(src="/2_hotel-booking/blocks/header/img/logo-horizontal.svg", alt="Logo: Best Tour Plan")
+header
+    .navbar__top
+        .container
+            .navbar__wrap
+                a.navbar__logo(href="#")
+                    img.navbar__logo-img(src="/2_hotel-booking/blocks/header/img/logo-horizontal.svg", alt="Logo: Best Tour Plan")
 
 
-            block variables
-                - var element = "navbar__search"
-            include ../search/search.pug
+                block variables
+                    - var element = "navbar__search"
+                include ../search/search.pug
 
-            a.user(href="#") 
-                img.user__avatar(src="/2_hotel-booking/blocks/header/img"+avatar, alt="User Avatar")
-                span.user__name #{username}
+                a.user(href="#") 
+                    img.user__avatar(src="/2_hotel-booking/blocks/header/img"+avatar, alt="User Avatar")
+                    span.user__name #{username}
 
-            button.navbar__adaptive-btn
-                - for (var x = 0; x < 3; x++)
-                    span.navbar__adaptive-line
+                button.navbar__adaptive-btn
+                    - for (var x = 0; x < 3; x++)
+                        span.navbar__adaptive-line
 
     .navbar-bottom
         .container
