--- a/2_hotel-booking/index.pug
+++ b/2_hotel-booking/index.pug
@@ -8,3 +8,5 @@ html(lang="en")
         title Best Tour Plan - Hotel Booking
     body
         include ./blocks/header/header.pug
+        include ./blocks/breadcrumb/breadcrumb.pug
+        
