--- a/2_hotel-booking/blocks/header/config.pug
+++ b/2_hotel-booking/blocks/header/config.pug
@@ -1,3 +1,4 @@
 - var username = "Nathan"
 - var avatar = "/user-avatar.png"
 - var navbarmenu__items = ["All Deals", "Hotels", "Activities", "Hotel Day Packages", "Restaurants", "Events", "Rodrigues"]
+- var img = "/2_hotel-booking/blocks/"
