--- a/2_hotel-booking/css/style.scss
+++ b/2_hotel-booking/css/style.scss
@@ -16,5 +16,8 @@
 //Подключение breadcrumb
 @import "../blocks/breadcrumb/breadcrumb.scss";
 
+//Подключение информации об отеле
+@import "../blocks/hotel-info/hotel-info";
+
 //Подключение стилей для адаптива
 @import "./media";
