--- a/2_hotel-booking/css/style.css
+++ b/2_hotel-booking/css/style.css
@@ -349,6 +349,7 @@ template {
 body {
   color: #333333;
   background-color: #F5FAFE;
+  font-family: "Mulish", serif;
 }
 
 img {
@@ -610,6 +611,136 @@ img {
 
 .breadcrumb__link--active {
   pointer-events: none;
+}
+
+.hotel-info__wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.hotel-info__wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.hotel-info__stars {
+  height: 6px;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.hotel-info__star {
+  width: 6px;
+  height: auto;
+}
+
+.hotel-info_text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.hotel-info__name {
+  margin: 4px 0 0 0;
+  font-family: "Mulish", serif;
+  font-size: 24px;
+  font-weight: 700;
+  color: #333333;
+  line-height: 30px;
+  text-transform: uppercase;
+}
+
+.hotel-info__offer {
+  padding: 3px 9px;
+  margin: 4px 0 0 23px;
+  background-color: #EC1F46;
+  border-radius: 3px;
+  font-family: "Mulish", serif;
+  font-size: 10px;
+  font-weight: 600;
+  color: #FFFFFF;
+  line-height: 13px;
+}
+
+.hotel-info__description {
+  margin: 0;
+}
+
+.hotel-info__counter::after {
+  content: "/";
+}
+
+.hotel-info__ratting {
+  background-color: #EC1F46;
+  border-radius: 4px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  width: 65px;
+  height: 45px;
+}
+
+.hotel-info__ratting-text {
+  margin: auto;
+  font-family: "Mulish", serif;
+  font-size: 8px;
+  font-weight: 600;
+  color: #FFFFFF;
+  line-height: 10px;
+}
+
+.hotel-info__counter {
+  font-family: "Mulish", serif;
+  font-size: 10px;
+  font-weight: 700;
+  color: #FFFFFF;
+  line-height: 13px;
+}
+
+.hotel-info__maxratting {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  -ms-flex-item-align: baseline;
+      align-self: baseline;
+  font-family: "Mulish", serif;
+  font-size: 8px;
+  font-weight: 700;
+  color: #FFFFFF;
+  line-height: 13px;
+}
+
+.hotel-info__description {
+  font-family: "Mulish", serif;
+  font-size: 12px;
+  font-weight: 400;
+  color: #333333;
+  line-height: 15px;
 }
 
 @media (max-width: 870px) {
