--- a/2_hotel-booking/index.pug
+++ b/2_hotel-booking/index.pug
@@ -9,4 +9,6 @@ html(lang="en")
     body
         include ./blocks/header/header.pug
         include ./blocks/breadcrumb/breadcrumb.pug
+        include ./blocks/hotel-info/hotel-info.pug
+        
         
