--- a/2_hotel-booking/css/style.scss
+++ b/2_hotel-booking/css/style.scss
@@ -16,7 +16,7 @@
 //Подключение breadcrumb
 @import "../blocks/breadcrumb/breadcrumb.scss";
 
-//Подключение информации об отеле
+//Подключение стилей информации об отеле
 @import "../blocks/hotel-info/hotel-info";
 
 //Подключение стилей для адаптива
