--- a/2_hotel-booking/css/_media.scss
+++ b/2_hotel-booking/css/_media.scss
@@ -69,29 +69,25 @@
     .user {
         display: none;
     }
-}
 
-@media (max-width: 600px) {
     .rating {
         display: none;
     }
-}
-
-@media (max-width: 576px) {
-    .navbar {
-        &__logo-img {
-            width: 99px;
-        }
-    }
 
     .hotel-info {
+        &__wrap {
+            flex-wrap: wrap;
+        }
+
         &__wrapper {
+            flex-basis: 100%;
             justify-content: space-between;
         }
 
         &__name {
             flex-basis: 100%;
-            margin: auto;
+            margin-top: 10px;
+
         }
 
         &__offer {
@@ -100,7 +96,15 @@
         }
 
         &__stars {
-            flex-basis: auto;
+            flex-basis: content;
+        }
+    }
+}
+
+@media (max-width: 576px) {
+    .navbar {
+        &__logo-img {
+            width: 99px;
         }
     }
 }
