Created slider fo hotel-info

--- a/2_hotel-booking/blocks/hotel-info/config.pug
+++ b/2_hotel-booking/blocks/hotel-info/config.pug
@@ -1,4 +1,4 @@
 - var hotel = "GRAND HILTON HOTEL"
 - var isFlashOffer = true
 - var description = "Half-Board / All Inclusive + Complimentary Activities + Child Stays Free"
-- var star_counter = 5
+- var starCounter = 5
