--- a/2_hotel-booking/blocks/hotel-info/hotel-info.pug
+++ b/2_hotel-booking/blocks/hotel-info/hotel-info.pug
@@ -5,7 +5,7 @@ section.hotel-info
         .hotel-info__wrap
             .hotel-info__wrapper
                 .hotel-info__stars
-                    - for (var x=0; x<star_counter; x++)
+                    - for (var x=0; x<starCounter; x++)
                         img(src=img+"hotel-info/img/star.svg", alt="Star").hotel-info__star
                 h1.hotel-info__name #{hotel}
                 if isFlashOffer
@@ -13,4 +13,7 @@ section.hotel-info
             include ../rating/rating.pug
             
         p.hotel-info__description #{description}
+        .hotel-info__grid
+            include ../slider/slider.pug
+
     
