--- a/2_hotel-booking/css/style.scss
+++ b/2_hotel-booking/css/style.scss
@@ -19,5 +19,8 @@
 //Подключение стилей информации об отеле
 @import "../blocks/hotel-info/hotel-info";
 
+//Подключение стилей слайдера
+@import "../blocks/slider/css/slider.scss";
+
 //Подключение стилей для адаптива
 @import "./media";
