--- a/2_hotel-booking/blocks/hotel-info/hotel-info.pug
+++ b/2_hotel-booking/blocks/hotel-info/hotel-info.pug
@@ -17,6 +17,6 @@ section.hotel-info
             include ./slider/slider.pug
             .hotel-info__right-wrap
                 include ./booking/booking.pug
-                .hotel-info__map
+                iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7905.078750778592!2d98.29450437334577!3d7.83847559479484!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x305025650c33dbab%3A0xa67a542329d011e1!2z0J_RhdGD0LrQtdGCLCDQmtCw0YDQvtC9LCDQntGC0LXQu9GMINCl0LjQu9GC0L7QvQ!5e0!3m2!1sru!2sru!4v1650300302889!5m2!1sru!2sru" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade").hotel-info__map
 
     
